--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GEORGE DYCK OS</title>
+    
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -64,8 +69,7 @@
         <div class="title-bar">
             <span class="title">Window</span>
             <div class="title-bar-controls">
-                <button class="minimize-button" aria-label="Minimize" data-symbol="0"></button>
-                <button class="close-button" aria-label="Close" data-symbol="r"></button>
+                <button class="minimize-button" aria-label="Minimize">&minus;</button> <button class="close-button" aria-label="Close">&times;</button> 
             </div>
         </div>
         <div class="window-body">
