--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             <img src="images/folder.png" alt="Photos Folder"> 
             <span>Photos</span>
         </div>
+        <div class="desktop-icon" id="icon-settings">
+            <img src="images/settings.png" alt="Settings"> 
+            <span>Settings</span>
+        </div>
         <div class="desktop-icon" id="icon-cep">
             <img src="images/brain.png" alt="CEP BBS"> 
             <span>CEP.BAT</span>
@@ -97,7 +101,7 @@
                 </ul>
             </li>
 
-            <li data-action="open-window" data-window-id="settings-window" data-window-title="Settings" data-content-type="text" data-content="Settings: Control Panel, Printers, Taskbar..."><span>S</span>ettings</li>
+            <li data-app="settings"><span>S</span>ettings</li>
             <li data-action="open-window" data-window-id="find-window" data-window-title="Find" data-content-type="text" data-content="Find: Files or Folders..."><span>F</span>ind</li>
             <li class="separator"></li>
             <li data-action="help"><span>H</span>elp</li>
