--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             data-window-title="Art" data-content-type="custom-art-list"> <img src="images/folder.png" alt="Art Folder"> 
             <span>Art</span>
         </div>
-
+        <div class="desktop-icon" id="icon-firewall" style="display: none;">
+            <img src="images/firewall_icon.png" alt="Firewall">
+            <span>Firewall.exe</span>
+        </div>
         <div class="desktop-icon" id="icon-moth"><img src="images/moth.png" alt="Luana Moth"> 
             <span>Luana_Moth.exe</span>
         </div>
@@ -99,8 +102,7 @@
                 <span><u>S</u>ettings</span>
             </li>
 
-            <li data-action="open-window" data-window-id="find-window" data-window-title="Find" data-content-type="text" data-content="Find: Files or Folders...">
-                <img src="images/find_icon.png" class="start-menu-icon">
+            <li data-action="find"> <img src="images/find_icon.png" class="start-menu-icon">
                 <span><u>F</u>ind</span>
             </li>
 
